# Advent-Of-Code-2021

./: .gitignore  Cargo.toml  README.md  output.txt
day1-10/src/day1/: day1.rs
day1-10/src/day10/: lib.rs  main.rs
day1-10/src/day2/: common.rs  mod.rs
day1-10/src/day3/: README.md
day1-10/src/day3/node/: main.js  package.json
day1-10/src/day4/: main.rs
day1-10/src/day6/: main.rs
day1-10/src/day8/: main.rs
day1-10/src/day9/: main.rs
day1-10/src/json_reader/: mod.rs
day11/src/: main.rs
day12/: main.swift
day13/: main.swift
day14/: main.rb  main.sh  readme.md
day15/: README.md  data.rb  visualize.rb
day15/src/: grid.zig  input.zig  main.zig  priorityQueue.zig  vec.zig
day16/: README.md  make.rb
day16/src/: defs.h  input.c  input.h  main.c  node.c  node.h  parsing.c  parsing.h  part1.c  part1.h  part2.c  part2.h  tests.c  transmission.h
day17/: main.rb
src/: main.rs
src/day2/: part1.rs
src/day3/: README.md  main.rs
src/day3/node/: main.js  output.txt  package-lock.json  package.json  script2.js  webpack.config.js
src/day7/: main.rs
src/inputs/: input.json  input_day2.json  input_day3.json  tmp.txt
src/outputs/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  day5.txt
