[package]
name = "submarine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
indicatif = "0.16.2"
uuid = { version = "0.8.2", features = ["v4"] }
colored = "2.0.0"

# For debug purposes
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"